[package]
name = "backed-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backed"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
